--- a/methodsPaper/Makefile
+++ b/methodsPaper/Makefile
@@ -1,4 +1,4 @@
-manuscript.pdf: manuscript.tex ../tex/ITHIM.bib
+manuscript.pdf: manuscript.tex ../tex/ITHIM.bib ./tex/abstract.tex ./tex/conclusion.tex ./tex/discussion.tex ./tex/introduction.tex ./tex/materialsAndMethods.tex ./tex/results.tex ./tex/supportingInformation.tex
 	pdflatex manuscript.tex
 	bibtex manuscript.aux
 	pdflatex manuscript.tex
