Update to methods paper

--- a/secondPaper/Makefile
+++ b/secondPaper/Makefile
@@ -1,8 +1,8 @@
-manuscript.pdf: manuscript.tex ../tex/ITHIM.bib ./tex/abstract.tex ./tex/discussion.tex ./tex/introduction.tex ./tex/methods.tex ./tex/publicHealthImplications.tex ./tex/results.tex
-	pdflatex manuscript.tex
-	bibtex manuscript.aux
-	pdflatex manuscript.tex
-	pdflatex manuscript.tex
+secondPaper.pdf: secondPaper.tex ../tex/ITHIM.bib ./tex/abstract.tex ./tex/discussion.tex ./tex/introduction.tex ./tex/methods.tex ./tex/publicHealthImplications.tex ./tex/results.tex
+	pdflatex secondPaper.tex
+	bibtex secondPaper.aux
+	pdflatex secondPaper.tex
+	pdflatex secondPaper.tex
 
 clean:
 	rm -rf ./*.aux
