--- a/methodsPaper/Makefile
+++ b/methodsPaper/Makefile
@@ -1,8 +1,8 @@
-manuscript.pdf: manuscript.tex ../tex/ITHIM.bib ./tex/abstract.tex ./tex/conclusion.tex ./tex/discussion.tex ./tex/introduction.tex ./tex/materialsAndMethods.tex ./tex/results.tex ./tex/supportingInformation.tex
-	pdflatex manuscript.tex
-	bibtex manuscript.aux
-	pdflatex manuscript.tex
-	pdflatex manuscript.tex
+methodsPaper.pdf: methodsPaper.tex ../tex/ITHIM.bib ./tex/abstract.tex ./tex/conclusion.tex ./tex/discussion.tex ./tex/introduction.tex ./tex/materialsAndMethods.tex ./tex/results.tex ./tex/supportingInformation.tex
+	pdflatex methodsPaper.tex
+	bibtex methodsPaper.aux
+	pdflatex methodsPaper.tex
+	pdflatex methodsPaper.tex
 
 clean:
 	rm -rf ./*.aux
