Commented-out old text and update Makefile

--- a/methodsPaper/Makefile
+++ b/methodsPaper/Makefile
@@ -1,4 +1,4 @@
-methodsPaper.pdf: methodsPaper.tex ../tex/ITHIM.bib ./tex/abstract.tex ./tex/conclusion.tex ./tex/discussion.tex ./tex/introduction.tex ./tex/materialsAndMethods.tex ./tex/results.tex ./tex/supportingInformation.tex
+methodsPaper.pdf: methodsPaper.tex ../tex/ITHIM.bib ./tex/abstract.tex ./tex/conclusion.tex ./tex/discussion.tex ./tex/introduction.tex ./tex/materialsAndMethods.tex ./tex/results.tex ./tex/supportingInformation.tex figures/fig1.pdf figures/fig2.pdf figures/fig3.pdf
 	pdflatex methodsPaper.tex
 	bibtex methodsPaper.aux
 	pdflatex methodsPaper.tex
