Now methods paper is created with knitr
See files ./lib/*.Rnw for editing content.

--- a/methodsPaper/Makefile
+++ b/methodsPaper/Makefile
@@ -1,4 +1,5 @@
-methodsPaper.pdf: methodsPaper.tex ../tex/ITHIM.bib ./tex/abstract.tex ./tex/conclusion.tex ./tex/discussion.tex ./tex/introduction.tex ./tex/materialsAndMethods.tex ./tex/results.tex ./tex/supportingInformation.tex figures/fig1.pdf
+methodsPaper.pdf: ../tex/ITHIM.bib ./lib/materialsAndMethods.Rnw
+	R -e 'library("knitr"); setwd("~/GHI/methodsPaper/lib"); knit("~/GHI/methodsPaper/lib/materialsAndMethods.Rnw"); knit("~/GHI/methodsPaper/lib/abstract.Rnw"); knit("~/GHI/methodsPaper/lib/introduction.Rnw");  knit("~/GHI/methodsPaper/lib/conclusion.Rnw"); knit("~/GHI/methodsPaper/lib/discussion.Rnw"); knit("~/GHI/methodsPaper/lib/results.Rnw"); knit("~/GHI/methodsPaper/lib/supportingInformation.Rnw");'
 	pdflatex methodsPaper.tex
 	bibtex methodsPaper.aux
 	pdflatex methodsPaper.tex
