Still working on transitioning to knitr for methods paper

--- a/methodsPaper/Makefile
+++ b/methodsPaper/Makefile
@@ -1,5 +1,5 @@
-methodsPaper.pdf: ../tex/ITHIM.bib ./lib/materialsAndMethods.Rnw
-	R -e 'library("knitr"); setwd("~/GHI/methodsPaper/lib"); knit("~/GHI/methodsPaper/lib/materialsAndMethods.Rnw"); knit("~/GHI/methodsPaper/lib/abstract.Rnw"); knit("~/GHI/methodsPaper/lib/introduction.Rnw");  knit("~/GHI/methodsPaper/lib/conclusion.Rnw"); knit("~/GHI/methodsPaper/lib/discussion.Rnw"); knit("~/GHI/methodsPaper/lib/results.Rnw"); knit("~/GHI/methodsPaper/lib/supportingInformation.Rnw");'
+methodsPaper.pdf: ./methodsPaper.Rnw ../tex/ITHIM.bib ./lib/materialsAndMethods.Rnw ./lib/abstract.Rnw ./lib/introduction.Rnw
+	R -e 'library("knitr"); setwd("~/GHI/methodsPaper"); knit("~/GHI/methodsPaper/methodsPaper.Rnw")'
 	pdflatex methodsPaper.tex
 	bibtex methodsPaper.aux
 	pdflatex methodsPaper.tex
